Generic code cleanup. Remove dead stuffs.